--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Author from "../entities/author/ui/author/index.astro";
 import { listBlog } from "../entities/blog/api";
-import BlogCard from "../entities/blog/ui/blog-card/index.astro";
+import BlogList from "../features/blog/ui/blog-list.astro";
 import Document from "../widgets/layout/document/index.astro";
 
 const allBlogs = await listBlog();
@@ -21,45 +21,9 @@ const blogs = allBlogs.slice(0, 20);
         </h2>
       </div>
     </div>
-    <ul class="grid place-self-start gap-y-8">
-      {
-        blogs.map((blog) => (
-          <li>
-            <BlogCard blog={blog} />
-          </li>
-        ))
-      }
-    </ul>
+    <BlogList page={blogs} />
     <div>
       <Author />
     </div>
   </section>
 </Document>
-
-<style is:global>
-  ul::after {
-    border-radius: 1rem;
-    content: "";
-    position: absolute;
-    background: hsl(0 0% 10%);
-    pointer-events: none;
-    z-index: -2;
-    position-anchor: var(--anchor);
-    inset: calc(anchor(top) - 20px) calc(anchor(right) - 20px)
-      calc(anchor(bottom) - 20px) calc(anchor(left) - 20px);
-    transition: inset 0.2s;
-  }
-
-  [data-theme="light"] ul::after {
-    z-index: 0;
-    background: var(--ds-gray-200);
-    opacity: 0.2;
-  }
-
-  ul:has(li:hover) {
-    --anchor: --active;
-  }
-  li:hover {
-    anchor-name: --active;
-  }
-</style>
