--- a/src/entities/author/ui/author/index.astro
+++ b/src/entities/author/ui/author/index.astro
@@ -11,6 +11,7 @@ import AuthorImage from "./ikuma.svg";
     src={AuthorImage}
     alt={Author.name}
     class="row-span-2 col-span-1 justify-self-end w-10 sm:w-12 aspect-square"
+    loading="eager"
   />
   <p class="text-heading-16 text-foreground">{Author.name}</p>
   <p class="text-muted tracking-wider text-label-14-mono">
