--- a/src/entities/blog/ui/blog-card/index.astro
+++ b/src/entities/blog/ui/blog-card/index.astro
@@ -18,6 +18,7 @@ const { blog } = Astro.props as Props;
     to: "/blog/[id]",
     params: { id: blog.id },
   })}
+  transition:persist
 >
   <Time date={blog.data.publishDate} label="投稿日" />
 
