--- a/src/features/blog/ui/blog-list.astro
+++ b/src/features/blog/ui/blog-list.astro
@@ -24,19 +24,13 @@ const { page } = Astro.props;
     border-radius: 1rem;
     content: "";
     position: absolute;
-    background: hsl(0 0% 10%);
+    background: hsla(0, 0%, 77%, 0.05);
     pointer-events: none;
-    z-index: -2;
+    z-index: 0;
     position-anchor: var(--anchor);
     inset: calc(anchor(top) - 20px) calc(anchor(right) - 20px)
       calc(anchor(bottom) - 20px) calc(anchor(left) - 20px);
     transition: inset 0.2s;
-  }
-
-  [data-theme="light"] ul::after {
-    z-index: 0;
-    background: var(--ds-gray-200);
-    opacity: 0.2;
   }
 
   ul:has(li:hover) {
