--- a/src/features/blog/ui/writer.astro
+++ b/src/features/blog/ui/writer.astro
@@ -3,9 +3,7 @@ import Author from "../../../entities/author/ui/author/index.astro";
 ---
 
 <section>
-  <h2
-    class="text-lg font-bold mb-4 border-b border-foreground/10 pb-2 text-foreground"
-  >
+  <h2 class="text-md mb-4 border-b border-foreground/10 pb-2 text-foreground">
     書いた人
   </h2>
   <Author />
