--- a/src/features/talk/ui/talk.astro
+++ b/src/features/talk/ui/talk.astro
@@ -13,17 +13,13 @@ const { title, publishDate } = Astro.props;
 
 <div class="grid grid-rows-[1fr_max-content] gap-x-8 min-h-full sm:pt-12">
   <div class={"space-y-8 sm:space-y-16"}>
-    <hgroup class="space-y-4">
+    <hgroup class="space-y-4 text-center">
       <h2
-        class="text-center text-2xl sm:text-3xl font-bold break-all tracking-widest !leading-relaxed"
+        class="text-2xl sm:text-3xl font-bold break-all tracking-widest !leading-relaxed"
       >
         {title}
       </h2>
-      <div
-        class="flex items-center justify-center gap-2 text-md text-muted-foreground"
-      >
-        <Time date={publishDate} />
-      </div>
+      <Time date={publishDate} />
     </hgroup>
     <article class={"break-all prose"}>
       <slot name="slide" />
