--- a/src/shared/ui/time/index.astro
+++ b/src/shared/ui/time/index.astro
@@ -8,7 +8,7 @@ type Props = {
 const { date, size = "medium", label } = Astro.props;
 const sizeClasses = {
   small: "text-sm",
-  medium: "text-label-14 sm:text-label-14 text-gray-700",
+  medium: "text-label-14 sm:text-label-14",
   large: "text-lg",
 };
 ---
