--- a/src/features/blog/ui/blog-list.astro
+++ b/src/features/blog/ui/blog-list.astro
@@ -9,7 +9,7 @@ interface Props {
 const { page } = Astro.props;
 ---
 
-<ul class="grid place-self-start gap-y-8">
+<ul class="grid place-self-start gap-y-8 lg:gap-y-20 w-full">
   {
     page.map((blog) => (
       <li>
