--- a/src/features/pagination/ui/page-selector.astro
+++ b/src/features/pagination/ui/page-selector.astro
@@ -41,7 +41,7 @@ const isLastPage = page.currentPage === page.lastPage;
       size={16}
       name="lucide:chevron-down"
       aria-hidden="true"
-      class="text-muted-foreground group-aria-expanded/button:-rotate-180"
+      class="text-foreground group-aria-expanded/button:-rotate-180"
     />
   </button>
 
@@ -61,13 +61,13 @@ const isLastPage = page.currentPage === page.lastPage;
           "block px-4 py-3 text-base",
           isInitialPage
             ? "cursor-not-allowed text-border"
-            : "hover:bg-muted focus:outline-4"
+            : "hover:bg-muted-foreground focus:outline-4"
         )}
       >
         最初のページへ移動する
       </a>
     </li>
-    <div class="border-b border-muted"></div>
+    <div class="border-b border-muted-foreground"></div>
     <li tabindex="-1" role="menuitem" id="last-page">
       <a
         href={lastPageUrl}
@@ -75,7 +75,7 @@ const isLastPage = page.currentPage === page.lastPage;
           "block px-4 py-3 text-base",
           isLastPage
             ? "cursor-not-allowed text-border"
-            : "hover:bg-muted focus:outline-4"
+            : "hover:bg-muted-foreground focus:outline-4"
         )}
       >
         最後のページへ移動する
