--- a/src/shared/ui/styled-icon/index.astro
+++ b/src/shared/ui/styled-icon/index.astro
@@ -7,10 +7,7 @@ const { class: className } = Astro.props;
 ---
 
 <div
-  class:list={[
-    "w-6 aspect-square hover:opacity-70 transition-opacity rounded-md",
-    className,
-  ]}
+  class:list={["w-6 aspect-square transition-opacity rounded-md", className]}
 >
   <slot />
 </div>
