--- a/src/widgets/layout/document/footer/index.astro
+++ b/src/widgets/layout/document/footer/index.astro
@@ -4,7 +4,7 @@ import Copyright from "./copyright.astro";
 import SocialIcon from "./social-icon/index.astro";
 ---
 
-<footer class="bg-background border-t border-muted-foreground">
+<footer class="bg-background">
   <div
     class="max-w-screen-lg mx-auto px-4 py-3 text-foreground flex justify-between items-center"
   >
