--- a/src/features/blog/ui/tags.astro
+++ b/src/features/blog/ui/tags.astro
@@ -11,14 +11,14 @@ const { tags } = Astro.props;
   <h2 class="text-md mb-4 border-b border-foreground/10 pb-2 text-foreground">
     タグ
   </h2>
-  <ul class="flex flex-wrap gap-2">
+  <div class="flex flex-wrap gap-2">
     {
       tags?.map((tag) => (
-        <li class="text-[0.9rem] text-foreground/80 hover:opacity-80">
+        <Fragment class="text-[0.9rem] text-foreground/80 hover:opacity-80">
           <Badge variant="inverted" size="sm">
             {tag}
           </Badge>
-        </li>
+        </Fragment>
       ))
     }
     {
@@ -28,5 +28,5 @@ const { tags } = Astro.props;
         </li>
       )
     }
-  </ul>
+  </div>
 </section>
