--- a/src/widgets/layout/document/without-main.astro
+++ b/src/widgets/layout/document/without-main.astro
@@ -1,6 +1,7 @@
 ---
 import "./globalStyles.css";
 import "./global.css";
+import { ClientRouter } from "astro:transitions";
 import ThemeProvider from "../../../features/select-theme/ui/theme-provider/index.astro";
 import { SITE } from "../../../shared/config/site";
 import Footer from "./footer/index.astro";
@@ -41,14 +42,15 @@ const ogp = new URL(ogImage.src, Astro.site?.origin as string);
     <title>{pageTitlePrefixed}</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="canonical" href={url} />
+    <ClientRouter />
     <ThemeProvider />
   </head>
-  <body class="min-h-screen grid grid-rows-[auto_1fr_auto] bg-background">
+  <body
+    class="relative min-h-screen grid grid-rows-[auto_1fr_auto] bg-background"
+  >
     <Header />
-    <main>
-      <div class="h-full max-w-screen-md mx-auto p-4 mb-8">
-        <slot />
-      </div>
+    <main class="px-7 py-10">
+      <slot />
     </main>
     <Footer />
   </body>
