feat(blog): add dot

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import "../shared/ui/markdown/index.css";
 const blogs = (await listBlog()).slice(0, 5); // Fetching only the first 10 blogs for the homepage
 ---
 
-<Document>
+<Document dot>
   <div class="prose space-y-6">
     <section class="space-y-4">
       <h1 class="font-bold text-foreground tracking-wider bg-background/80">
