--- a/src/features/select-theme/ui/theme-selector/index.astro
+++ b/src/features/select-theme/ui/theme-selector/index.astro
@@ -1,7 +1,5 @@
 ---
 import StyledIcon from "../../../../shared/ui/styled-icon/index.astro";
-import Moon from "./moon.svg";
-import Sun from "./sun.svg";
 ---
 
 <theme-toggle class="relative w-4 aspect-square">
@@ -12,13 +10,13 @@ import Sun from "./sun.svg";
     aria-label="テーマを切り替える"
     transition:persist
   >
-    <StyledIcon class="absolute inset-0 hidden group-aria-[pressed=true]:block">
-      <Sun aria-label="ダークテーマに切り替える" />
+    <StyledIcon class="text-foreground/90 absolute inset-0 hidden group-aria-[pressed=true]:block">
+      <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12a4 4 0 1 0 8 0a4 4 0 1 0-8 0m-5 0h1m8-9v1m8 8h1m-9 8v1M5.6 5.6l.7.7m12.1-.7l-.7.7m0 11.4l.7.7m-12.1-.7l-.7.7"/></svg>
     </StyledIcon>
     <StyledIcon
-      class="absolute inset-0 hidden group-aria-[pressed=false]:block"
+      class="text-foreground/90 absolute inset-0 hidden group-aria-[pressed=false]:block"
     >
-      <Moon aria-label="ライトテーマに切り替える" />
+      <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M12.058 20q-3.333 0-5.667-2.334T4.058 12q0-2.47 1.413-4.535q1.414-2.067 4.01-2.973q.306-.107.536-.056t.381.199t.192.38q.04.233-.063.489q-.194.477-.282.971T10.158 7.5q0 2.673 1.863 4.537q1.864 1.863 4.537 1.863q.698 0 1.277-.148q.58-.148.988-.24q.218-.04.399.01t.292.176q.115.125.156.308t-.047.417q-.715 2.45-2.803 4.013T12.058 20"/></svg>
     </StyledIcon>
   </button>
 </theme-toggle>
