--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,6 +43,9 @@ const blogs = (await listBlog()).slice(0, 5); // Fetching only the first 10 blog
         <li>
           <a href="https://zenn.dev/ikuma">Zenn</a>
         </li>
+        <li>
+          <a href="https://speakerdeck.com/ikumatadokoro">SpeakerDeck</a>
+        </li>
       </ul>
     </section>
     <section>
