--- a/src/widgets/layout/document/header/index.astro
+++ b/src/widgets/layout/document/header/index.astro
@@ -8,7 +8,15 @@ import SiteLogo from "./site-logo/site-logo.astro";
   <nav class="flex items-center justify-between mx-auto mt-4 sm:my-4 px-4">
     <SiteLogo />
     <div class="flex items-center gap-4">
-      <Link to="/blog" className="text-lg text-foreground font-bold">
+      <div class="flex items-center gap-4 pr-4 border-r border-foreground/20">
+        <a href="https://github.com/IkumaTadokoro" target="_blank" class="text-foreground/80">
+          <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></svg>
+        </a>
+        <a href="https://x.com/ikumatdkr" target="_blank" class="text-foreground/80">
+          <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M17.751 3h3.067l-6.7 7.625L22 21h-6.172l-4.833-6.293L5.464 21h-3.07l7.167-8.155L2 3h6.328l4.37 5.752zm-1.076 16.172h1.7L7.404 4.732H5.58z"/></svg>
+        </a>
+      </div>
+      <Link to="/blog" className="text-foreground">
         <svg
           width="20"
           height="20"
@@ -26,7 +34,7 @@ import SiteLogo from "./site-logo/site-logo.astro";
           ></svg
         >
       </Link>
-      <Link to="/talk" className="text-lg text-foreground font-bold">
+      <Link to="/talk" className="text-foreground">
         <svg
           width="20"
           height="20"
@@ -41,6 +49,9 @@ import SiteLogo from "./site-logo/site-logo.astro";
             d="M2 3h20m-1 0v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V3m4 18l5-5l5 5"
           ></path></svg
         >
+      </Link>
+      <Link to="/rss.xml" className="text-foreground">
+        <svg width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m2.5 12A1.5 1.5 0 0 0 6 16.5A1.5 1.5 0 0 0 7.5 18A1.5 1.5 0 0 0 9 16.5A1.5 1.5 0 0 0 7.5 15M6 10v2a6 6 0 0 1 6 6h2a8 8 0 0 0-8-8m0-4v2a10 10 0 0 1 10 10h2A12 12 0 0 0 6 6"/></svg>
       </Link>
       <ThemeSelector />
     </div>
