--- a/src/shared/ui/markdown/index.css
+++ b/src/shared/ui/markdown/index.css
@@ -133,13 +133,13 @@ html[data-theme="dark"] .prose {
   line-height: 1.3333333;
 }
 .prose h3 {
-  color: inherit;
+  color: var(--fg-deep);
   font-weight: 600;
   font-size: 1.25em;
   margin-top: 1.6em;
   margin-bottom: 0.6em;
   line-height: 1.6;
-  opacity: 0.7;
+  opacity: 1;
 }
 .prose h4 {
   color: inherit;
